<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MoneyManager</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_startup">Startup</string>
    <string name="title_activity_login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="title_activity_login_success">LoginSuccess</string>
    <string name="login_success_message">You are logged in!</string>
    <string name="title_activity_register_user">RegisterUser</string>
    <string name="new_user_registration">New User Registration</string>
    <string name="logout">Log out</string>
    <string name="confirm_password">Confirm password</string>
    <string name="title_activity_user_account">User Account Page</string>
    <string name="error_intro">Registration failed: </string>
    <string name="error_blank_username">Please enter a username</string>
    <string name="error_blank_password">Please enter a password.</string>
    <string name="error_join"> and </string>
    <string name="error_end"> Thanks!</string>
    <string name="error_password_mismatch">Password does not match</string>
    <string name="title_activity_admin_account">AdminAccountActivity</string>
    <string name="admin_account_message">Welcome to the Admin\'s account. You can reset user passwords here.</string>
    <string name="create_account">Create Account</string>
    <string name="title_activity_create_account">CreateAccount</string>
    <string name="full_name">Full Account Name</string>
    <string name="display_name">Display Name</string>
    <string name="add_account">Create\nNew Account</string>
    <string name="title_activity_financial_account">FinancialAccountActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="remove_account">Remove\nAccount</string>
    <string name="account_name">Account Name</string>
    <string name="account_creation">Financial Account Creation</string>
    <string name="deposit">Deposit</string>
    <string name="withdraw">Withdraw</string>
    <string name="amount">Amount</string>
    <string name="withdraw_destination">Withdraw To</string>
    <string name="deposit_source">Deposit From</string>
    <string name="destination">Destination</string>
    <string name="source">Source</string>
    <string name="title_activity_transaction">TransactionActivity</string>
    <string name="balance">Balance: </string>
    <string name="make_transaction">Make\nTransaction</string>
    <string name="accept_picture">Continue</string>
    <string name="choose_picture">Choose a picture</string>
    <string name="take_picture">Take a picture</string>
    <string name="profile_picture">Profile picture</string>
    <string name="change_profile_picture">Change profile picture</string>
    <string name="init_balance">Initial balance</string>
    <string name="back_to_accounts">Back</string>
    <string name="title_activity_spending_report">SpendingReportActivity</string>
    <string name="view_report">View Spending Report</string>
    <string name="title_activity_drawer">MoneyManager</string>
    <string name="drawer_title">Menu</string>
    <string name="drawer_close">Close drawer</string>
    <string name="drawer_open">Open drawer</string>
    <string name="edit_text">EditText</string>
    <string name="withdrawal_amount">amount</string>
    <string name="created_at">createdAt</string>
    <string name="date_picker">datePicker</string>
    <string name="title_activity_transaction_report">TransactionReport</string>
    <string name="title_activity_graph">GraphActivity</string>
    <string name="title_activity_graph_select">GraphSelectActivity</string>
    <string name="generate_graph">Generate Graph</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_blank_email">Please enter your email</string>

</resources>
