<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    
    android:rowCount="7" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="69dp"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal"       
        android:gravity="center"
        android:text="@string/profile_picture"
        android:textSize="20sp" />

    <Button
        android:id="@+id/choosepicture"
        android:layout_width="156dp"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_gravity="right|top"
        android:layout_row="3"
        android:background="@drawable/green_button"
        android:text="@string/choose_picture" />

    <ImageView
        android:id="@+id/profilepicture"
        android:layout_width="209dp"
        android:layout_height="209dp"
        android:layout_column="1"
        android:layout_gravity="center_horizontal|top"
        android:layout_row="1"
        android:layout_marginBottom = "25dp"
        android:src="@drawable/default_profile_pic" />

    <Button
        android:id="@+id/takepicture"
        android:layout_width="156dp"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_gravity="left|top"
        android:layout_row="3"
        android:background="@drawable/green_button"
        android:text="@string/take_picture" />

    <Button
        android:id="@+id/acceptpicture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal|top"
        android:layout_margin="15dp"
        android:layout_row="4"
        android:background="@drawable/green_button"
        android:text="@string/accept_picture" />

</GridLayout>